tests/snapshots/run_wpt_conformance__coreml_roundEven_float16_positive_0D_scalar.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "round_even.https.any.js",
    "roundEven float16 positive 0D scalar",
    "coreml",
    "PASS",
)
