tests/snapshots/run_wpt_conformance__coreml_roundEven_float32_negative_1D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "round_even.https.any.js",
    "roundEven float32 negative 1D tensor",
    "coreml",
    "PASS",
)
